--- a/TestLens/app/src/main/res/layout/activity_main.xml
+++ b/TestLens/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
 
     <com.nickrout.testlens.LensView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:hapticFeedbackEnabled="true"/>
 
 </LinearLayout>
