--- a/LensLauncher/app/src/main/res/values/colors.xml
+++ b/LensLauncher/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <!-- App Colors -->
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorAccent">#FF3D00</color>
 
     <!-- View Colors -->
     <color name="colorTransparent">#00FFFFFF</color>
