Improved Status Bar Touch Area
Used set dimen in resources instead, system dimes sometimes returns 0

--- a/LensLauncher/app/src/main/res/values/dimens.xml
+++ b/LensLauncher/app/src/main/res/values/dimens.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <!-- Lens Dimens -->
-    <dimen name="padding_activity">16dp</dimen>
-    <dimen name="item_padding_min">4dp</dimen>
+    <dimen name="status_bar_touch_area">40dp</dimen>
 
 </resources>
