--- a/LensLauncher/app/src/main/res/values/colors.xml
+++ b/LensLauncher/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <!-- App Colors -->
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorAccent">#F50057</color>
 
     <!-- View Colors -->
     <color name="colorTransparent">#00FFFFFF</color>
