Updated Colors / Icon
Grey, black, pink

--- a/LensLauncher/app/src/main/res/values/styles.xml
+++ b/LensLauncher/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowShowWallpaper">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorBlack</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
