Added Name Drawing
Draw app name on hover, removed alpha change. App name is a setting

--- a/LensLauncher/app/src/main/res/layout/activity_settings.xml
+++ b/LensLauncher/app/src/main/res/layout/activity_settings.xml
@@ -207,6 +207,35 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
+                android:text="@string/setting_show_name_app_hover"/>
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/switch_show_name_app_hover"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorDivider"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
                 android:text="@string/setting_show_touch_selection"/>
 
             <android.support.v7.widget.SwitchCompat
