--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Lens Dimens -->
+    <!-- Lens Dimensions -->
+    <dimen name="radius_touch_selection">50dp</dimen>
+    <dimen name="stroke_width_touch_selection">3dp</dimen>
     <dimen name="text_size_lens">14sp</dimen>
     <dimen name="text_stroke_lens">1dp</dimen>
     <dimen name="margin_lens_text">24dp</dimen>
