--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -7,5 +7,6 @@
     <dimen name="text_size_lens">14sp</dimen>
     <dimen name="text_stroke_lens">1dp</dimen>
     <dimen name="margin_lens_text">24dp</dimen>
+    <dimen name="shadow_text">1dp</dimen>
 
 </resources>
