Full About Activity
Header, text (with links), etc.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorDivider">#DDDDDD</color>
     <color name="colorValue">@color/colorBlack</color>
+    <color name="colorShadow">#80000000</color>
 
 </resources>
