--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -10,10 +10,12 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/image_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:src="@drawable/im_about"/>
+            android:src="@drawable/im_about"
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/text_view_about"
