--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -135,6 +135,40 @@
             android:layout_height="1dp"
             android:background="@color/colorDivider" />
 
+        <LinearLayout
+            android:id="@+id/layout_icon_pack_chooser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="@string/setting_icon_pack"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_selected_icon_pack"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/setting_default_icon_pack" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorDivider" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -281,11 +315,11 @@
             android:background="@color/colorDivider" />
 
         <RelativeLayout
+            android:id="@+id/setting_show_touch_selection_color_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="24dp"
-            android:id="@+id/setting_show_touch_selection_color_layout"
             android:layout_marginRight="24dp"
             android:layout_marginTop="16dp">
 
