--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -139,12 +139,12 @@
             android:id="@+id/layout_icon_pack_chooser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:orientation="vertical"
             android:paddingBottom="16dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
-            android:paddingTop="16dp"
-            android:orientation="vertical"
-            android:background="?android:attr/selectableItemBackground">
+            android:paddingTop="16dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -164,6 +164,33 @@
                 android:text="@string/setting_default_icon_pack" />
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorDivider" />
+
+        <LinearLayout
+            android:id="@+id/layout_app_arranger"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="16dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="@string/setting_app_arranger"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
