--- a/app/src/main/res/layout/element_app_arranger.xml
+++ b/app/src/main/res/layout/element_app_arranger.xml
@@ -27,5 +27,15 @@
             android:text="AppName"
             android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/element_app_hide"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:padding="6dp"
+            android:src="@drawable/ic_visible" />
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
