--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -186,8 +186,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:text="@string/setting_app_arranger"
-                android:textStyle="bold" />
+                android:text="@string/setting_app_arranger" />
 
         </LinearLayout>
 
