--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -21,4 +21,11 @@
     <dimen name="padding_about">32dp</dimen>
     <dimen name="header_margin_about">16dp</dimen>
 
+    <!-- App Element Dimension -->
+    <dimen name="width_app_icon">48dp</dimen>
+    <dimen name="radius_corner_card">4dp</dimen>
+
+    <!-- General -->
+    <dimen name="margin_fab">12dp</dimen>
+
 </resources>
