--- a/app/src/main/res/layout/activity_app_arranger.xml
+++ b/app/src/main/res/layout/activity_app_arranger.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
-        android:layout_margin="12dp"
+        android:layout_margin="@dimen/margin_fab"
         android:src="@drawable/ic_sort_white_48dp"
         app:fabSize="normal" />
 
