--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_item_about"
         android:title="@string/menu_title_about"
-        app:showAsAction="never">
-    </item>
+        app:showAsAction="never"></item>
+    <item
+        android:id="@+id/menu_item_reset_default"
+        android:title="@string/menu_title_reset_defaults"
+        app:showAsAction="never"></item>
 
     <item
         android:id="@+id/menu_item_show_apps"
-        android:title="@string/menu_title_show_apps"
         android:icon="@drawable/ic_apps_white_24dp"
-        app:showAsAction="ifRoom">
-    </item>
+        android:title="@string/menu_title_show_apps"
+        app:showAsAction="ifRoom"></item>
+
 
 </menu>
