--- a/app/src/main/res/layout/activity_app_arranger.xml
+++ b/app/src/main/res/layout/activity_app_arranger.xml
@@ -24,10 +24,7 @@
             android:id="@+id/arranger_sort_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="bottom|end"
+            android:layout_gravity="bottom|right"
             android:layout_margin="@dimen/margin_fab"
             android:src="@drawable/ic_sort_white_24dp"
             app:fabSize="normal" />
