Improved Lens algorithm & animation
Fullscreen, no more lens diameter, smoother animation using scale /
distortion, altered min/defaults, added lens animation time setting,
etc.

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -11,6 +11,7 @@
     <dimen name="margin_system">40dp</dimen>
     <dimen name="radius_new_app_tag">3dp</dimen>
     <dimen name="margin_new_app_tag">6dp</dimen>
+    <dimen name="number_circles">30dp</dimen>
 
     <!-- Settings Dimensions -->
     <dimen name="diameter_highlight_color_switch">32dp</dimen>
