--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -5,21 +5,26 @@
     <item
         android:id="@+id/menu_item_about"
         android:title="@string/menu_title_about"
-        app:showAsAction="never"></item>
+        app:showAsAction="never">
+    </item>
+
     <item
         android:id="@+id/menu_item_reset_default_settings"
         android:title="@string/menu_title_reset_defaults"
-        app:showAsAction="never"></item>
+        app:showAsAction="never">
+    </item>
+
     <item
-        android:id="@+id/menu_item_alter_default_launcher"
-        android:title="@string/menu_title_alter_default_launcher"
-        app:showAsAction="never"></item>
+        android:id="@+id/menu_item_change_home_launcher"
+        android:title="@string/menu_title_change_home_launcher"
+        app:showAsAction="never">
+    </item>
 
     <item
         android:id="@+id/menu_item_show_apps"
         android:icon="@drawable/ic_apps_white_24dp"
         android:title="@string/menu_title_show_apps"
-        app:showAsAction="ifRoom"></item>
-
+        app:showAsAction="ifRoom">
+    </item>
 
 </menu>
